--- a/css/signup.css
+++ b/css/signup.css
@@ -1,19 +1,22 @@
-*,*:before,*:after{
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
+  *, *:before, *:after {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
   }
-  body{
-  background-color: #080710;
+  
+  body {
+    background-color: #080710;
   }
-  .background{
-  width: 430px;
-  height: 520px;
-  position: absolute;
-  transform: translate(-50%,-50%);
-  left: 50%;
-  top: 50%;
+  
+  .background {
+    width: 430px;
+    height: 520px;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    left: 50%;
+    top: 50%;
   }
+  
   .background .shape {
     height: 200px;
     width: 200px;
@@ -21,82 +24,93 @@
     border-radius: 50%;
     clip-path: polygon(20% 0%, 0% 20%, 30% 50%, 0% 80%, 20% 100%, 50% 70%, 80% 100%, 100% 80%, 70% 50%, 100% 20%, 80% 0%, 50% 30%);
   }
-  .shape:first-child{
-  background: linear-gradient(
-    #1845ad,
-    #23a2f6
-  );
-  left: -80px;
-  top: -80px;
-  }
-  .shape:last-child{
-  background: linear-gradient(
-    to right,
-    #ff512f,
-    #f09819
-  );
-  right: -30px;
-  bottom: -80px;
-  }
-  form{
-  display: flex;
-  flex-direction: column;
-  flex-basis: auto;
-  height: 520px;
-  width: 400px;
-  background-color: rgba(255,255,255,0.13);
-  position: absolute;
-  transform: translate(-50%,-50%);
-  top: 50%;
-  left: 50%;
-  border-radius: 10px;
-  backdrop-filter: blur(10px);
-  border: 2px solid rgba(255,255,255,0.1);
-  box-shadow: 0 0 40px rgba(8,7,16,0.6);
-  padding: 50px 35px;
-  }
-  form *{
-  font-family: 'Poppins',sans-serif;
-  color: #ffffff;
-  letter-spacing: 0.5px;
-  outline: none;
-  border: none;
-  }
-  form h3{
-  font-size: 32px;
-  font-weight: 500;
-  line-height: 42px;
-  text-align: center;
+  
+  .shape:first-child {
+    background: linear-gradient(#1845ad, #23a2f6);
+    left: -70px;
+    top: -120px;
   }
   
-  label{
-  display: block;
-  margin-top: 30px;
-  font-size: 16px;
-  font-weight: 500;
+  .shape:last-child {
+    background: linear-gradient(to right, #ff512f, #f09819);
+    right: -70px;
+    bottom: -120px;
   }
-  input{
-  display: block;
-  height: 50px;
-  width: 100%;
-  background-color: rgba(255,255,255,0.07);
-  border-radius: 3px;
-  padding: 0 10px;
-  margin-top: 8px;
-  font-size: 14px;
-  font-weight: 300;
+  
+  form {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 600px; 
+    width: 380px; 
+    background-color: rgba(255, 255, 255, 0.13);
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+    border-radius: 10px;
+    backdrop-filter: blur(10px);
+    border: 2px solid rgba(255, 255, 255, 0.1);
+    box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
+    padding: 30px 35px;
   }
-  ::placeholder{
-  color: #e5e5e5;
+  
+  form * {
+    font-family: 'Poppins', sans-serif;
+    color: #ffffff;
+    letter-spacing: 0.5px;
+    outline: none;
+    border: none;
   }
-  button{
-  margin-top: 50px;
-  width: 100%;
-  background-color: #ffffff;
-  color: #080710;
-  padding: 15px 0;
-  font-size: 18px;
-  font-weight: 600;
-  border-radius: 5px;
-  cursor: pointer;
+  
+  form h3 {
+    font-size: 28px;
+    font-weight: 500;
+    line-height: 42px;
+    text-align: center;
   }
+  
+  label {
+    display: block;
+    margin-top: 20px;
+    font-size: 14px;
+    font-weight: 500;
+  }
+  
+  input {
+    display: block;
+    height: 40px;
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.07);
+    border-radius: 3px;
+    padding: 0 10px;
+    margin-top: 8px;
+    font-size: 14px;
+    font-weight: 300;
+  }
+  
+  ::placeholder {
+    color: #e5e5e5;
+  }
+  
+  button {
+    margin-top: 20px;
+    width: 100%;
+    background-color: #ffffff;
+    color: #080710;
+    padding: 12px 0;
+    font-size: 16px;
+    font-weight: 600;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  .sign-up {
+    text-align: center;
+    margin-top: 10px;
+  }
+  
+  .sign-up a {
+    color: #ff512f;
+  }
+  
